force-app/main/default/objects/ddcAssess__Assessment_Summary__c/ddcAssess__Assessment_Summary__c.object-meta.xml
<CustomObject>
    <label>Assessment Summary</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>