force-app/main/default/objects/ddcAssess__Assessment_Summary__c/fields/ddcAssess__Available_Accounts_By_Industry__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Available_Accounts_By_Industry__c</fullName>
    <defaultValue>0</defaultValue>
    <description>List of available accounts that can be populated by the Prospector API based on the Top Ten Industries in this org</description>
    <label>Available Accounts By Industry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>