force-app/main/default/objects/ddcAssess__Assessment_Summary__c/fields/ddcAssess__Available_Contacts__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Available_Contacts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Based on matched companies, the number of contacts available via the Prospector</description>
    <label>Available Contacts By Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>