force-app/main/default/objects/ddcAssess__Assessment_Summary__c/fields/ddcAssess__Available_Contacts_By_Industry__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Available_Contacts_By_Industry__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Available Contacts By Industry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>