force-app/main/default/objects/ddcAssess__Assessment_Summary__c/fields/ddcAssess__Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Batch_Id__c</fullName>
    <description>Batch id of the currently running or last batch job. Will cycle through batches for Account, Contact, and Lead.</description>
    <label>Batch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>