force-app/main/default/objects/ddcAssess__Assessment_Summary__c/fields/ddcAssess__Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Completion_Date__c</fullName>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>