force-app/main/default/objects/ddcAssess__Assessment_Summary__c/fields/ddcAssess__DUNSRight_Result__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__DUNSRight_Result__c</fullName>
    <label>DUNSRight Result</label>
    <length>128</length>
    <type>Text</type>
</CustomField>