force-app/main/default/objects/ddcAssess__Assessment_Summary__c/fields/ddcAssess__Failed_pcnt__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Failed_pcnt__c</fullName>
    <formula>IF(ddcAssess__Total__c &gt; 0,ddcAssess__Error_Count__c / ddcAssess__Total__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Failed %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>