force-app/main/default/objects/ddcAssess__Assessment_Summary__c/fields/ddcAssess__Version__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Version__c</fullName>
    <defaultValue>1.0</defaultValue>
    <label>Version</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>