force-app/main/default/objects/ddcAssess__Assessment_Summary__c/listViews/ddcAssess__All.listView-meta.xml
<ListView>
    <fullName>ddcAssess__All</fullName>
    <columns>ddcAssess__Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>